--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,96 @@
 			</div>
 		</section><!--first-->
 
-		<section class="we-do"></section>
+		<section class="we-do">
+			<div class="container">
+				<h2 class="we-do__title title title_bordered ">уважаемые клиенты</h2>
+				<p>Можно сколько угодно спорить о приемуществах разных видов кровельных покрытий, одно остается неоспоримым - металлочерепица и профнастил - это новая, высоконадежная защита Вашего дома на многие годы.</p>
+				<p>60-е годы прошлого столетия ознаменовались появлением на мировом рынке нового строительного материала - металлочерепицы. С момента выхода на рынок кровельных материалов и по сегодняшний день металлочерепица знимает одну из лидирующих позиций и имееет широкие рекомендации в промышденном и гражданском строительстве.</p>
+				<p>Основой для изготовления металлочерепицы служит холоднокатная горячеоцинкованная сталь с тольщиной листа от 0,45 до 0,5 мм, с полимерным покрытием.</p>
+				<a href="" class="we-do__link">далее...</a>
+			</div>
+		</section><!--we-do-->
+
+		<section class="products">
+			<div class="container">
+				<div class="products__header">
+					<h2 class="title title_bordered title_bordered-dark">наша продукция</h2>
+					<nav class="list">
+						<a href="" class="list__item list__item_border">всё</a>
+						<a href="" class="list__item list__item_border">металлочерепица</a>
+						<a href="" class="list__item list__item_border">профнастил</a>
+						<a href="" class="list__item list__item_border">декоративный профиль</a>
+						<a href="" class="list__item list__item_border">комплектующие</a>
+					</nav>
+				</div>
+				<div class="products__list">
+					<div class="products__item">
+						<img src="img/dash1.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash2.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash3.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash4.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash5.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash6.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash7.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br>профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash1.jpg" alt="">
+						<div class="over">
+							<p>декоративный <br> профиль</p>
+							<i>+</i>
+							<a href="">подробно</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		//= template/footer.html
 	</div><!--content-->
