--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, ВОДООТЛИВНОЙ СИСТЕМЫ <br>И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ
 						</p>
 					</div>
-					<div class="col-sm-4 col-sm-offset-1 manager">
+					<div class="col-sm-5 col-md-4 col-md-offset-1 manager">
 						<p>о наличии продукта можно уточнить у менеджера</p>
 						<button class="manager__btn buttn buttn_def">задать вопрос менеджеру <i class="manager__icon"></i></button>
 					</div>
@@ -46,7 +46,7 @@
 			<div class="container">
 				<div class="products__header">
 					<h2 class="title title_bordered title_bordered-dark">наша продукция</h2>
-					<nav class="list">
+					<nav class="products__menu list">
 						<a href="" class="list__item list__item_border">всё</a>
 						<a href="" class="list__item list__item_border">металлочерепица</a>
 						<a href="" class="list__item list__item_border">профнастил</a>
@@ -59,68 +59,125 @@
 						<img src="img/dash1.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash2.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash3.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash4.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash5.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash6.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash7.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br>профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 					<div class="products__item">
 						<img src="img/dash1.jpg" alt="">
 						<div class="over">
 							<p>декоративный <br> профиль</p>
-							<i>+</i>
-							<a href="">подробно</a>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
 						</div>
 					</div>
 				</div>
 			</div>
+		</section><!--products-->
+
+		<section class="about">
+			<div class="container">
+				<div class="row about__inner">
+					<div class="col-sm-6 col-md-5 about__txt">
+						<h2 class="we-do__title title title_bordered ">немного <br> о нашей компании</h2>
+						<p>На СООО "Брестсталь" Вас ждет доброжелательность и индивидуальный подход, кратчайшие сроки выполнения Вашего заказа.</p>
+						<p>У нас Вы можете получить консультацию по любому вопросу, касающемуся нашей продукции – начиная от осуществления замера и расчета необходимого количества комплектации кровли, до методов и способов укладки металлочерепицы на Вашей крыше.</p>
+						<button class="buttn buttn_err">возник вопрос?</button>
+					</div>
+					<div class="col-sm-6 col-md-offset-1 about__media">
+						<video preload="metadata" controls src="media/video.mp4">
+						</video>
+					</div>
+				</div>
+			</div>
+		</section><!--about-->
+
+		<section class="info">
+			<div class="container">
+				<p>Необходима консультация по нашей продукции? Или же вас интересует инструкции и советы по монтажу? </p>
+			</div>
+		</section><!--info-->
+
+		<section class="feedback">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-sm-push-6 feedback__txt">
+						<h2 class="title">свяжитесь с нами и мы ответим на ваши вопросы</h2>
+						<p>Также при возникновении вопросов вы можете обратиться в центральный офис компании.</p>
+						<p>Контакты главного офиса</p>
+						<div  class="contacts list list_colum list_aleft">
+							<a href="tel:0487702777" class="list__item contacts__link"><i class="icon-phone"></i> 048 77-02-777</a>
+							<a href="tel:0973291159" class="list__item contacts__link contacts__link_space">097-329-11-59</a>
+							<a href="tel:0800504010" class="list__item contacts__link contacts__link_space">0800-50-40-10</a>
+							<a href="" class="list__item contacts__link"><i class="icon-location "></i> г. Одесса, ул. Нежинская, 44</a>
+							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail"></i> uns@ukrnavi.com</a>
+						</div>
+					</div>
+						<div class="col-sm-6 col-md-5 col-sm-pull-6">
+							<form name="form1" id="form1" class="form">
+								<label for="name">имя</label>
+								<input class="form__field" type="text" id="name" name="name">
+								<label for="email">почта</label>
+								<input class="form__field" type="email" id="email" name="email">
+								<label for="name">сообщение</label>
+								<textarea class="form__field" name="message" id="message"></textarea>
+								<input type="submit" class="buttn buttn_err form__btn" id="send" value="отправить письмо">
+							</form>
+						</div>
+				</div>
+			</div>
+		</section><!--about-->
+
+		<section class="map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2747.252133653234!2d30.7241913149422!3d46.4833196728849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c631938aef927d%3A0x8f5def692f159abc!2z0LLRg9C70LjRhtGPINCd0ZbQttC40L3RgdGM0LrQsCwgNDQsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsA!5e0!3m2!1sru!2sru!4v1486115765558" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</section>
 
 		//= template/footer.html
