--- a/src/index.html
+++ b/src/index.html
@@ -157,8 +157,8 @@
 							<a href="tel:0487702777" class="list__item contacts__link"><i class="icon-phone"></i> 048 77-02-777</a>
 							<a href="tel:0973291159" class="list__item contacts__link contacts__link_space">097-329-11-59</a>
 							<a href="tel:0800504010" class="list__item contacts__link contacts__link_space">0800-50-40-10</a>
-							<a href="" class="list__item contacts__link"><i class="icon-location "></i> г. Одесса, ул. Нежинская, 44</a>
-							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail"></i> uns@ukrnavi.com</a>
+							<a href="" class="list__item contacts__link"><i class="icon-location "></i> г. Брест, ул. Учительская, 41/1</a>
+							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail"></i> breststal@.mail.ru</a>
 						</div>
 					</div>
 						<div class="col-sm-6 col-md-5 col-sm-pull-6">
@@ -177,7 +177,7 @@
 		</section><!--about-->
 
 		<section class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2747.252133653234!2d30.7241913149422!3d46.4833196728849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c631938aef927d%3A0x8f5def692f159abc!2z0LLRg9C70LjRhtGPINCd0ZbQttC40L3RgdGM0LrQsCwgNDQsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsA!5e0!3m2!1sru!2sru!4v1486115765558" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.8578267852886!2d23.698207115507888!3d52.04590227972721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47210c92c379862d%3A0xadd6a76bcb202053!2z0KHQntCe0J4gItCR0KDQldCh0KLQodCi0JDQm9CsIg!5e0!3m2!1sru!2sru!4v1486386392159" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</section>
 
 		//= template/footer.html
