--- a/src/index.html
+++ b/src/index.html
@@ -153,13 +153,14 @@
 						<h2 class="title">свяжитесь с нами и мы ответим на ваши вопросы</h2>
 						<p>Также при возникновении вопросов вы можете обратиться в центральный офис компании.</p>
 						<p>Контакты главного офиса</p>
-						<div  class="contacts list list_colum list_aleft">
-							<a href="tel:0487702777" class="list__item contacts__link"><i class="icon-phone"></i> 048 77-02-777</a>
-							<a href="tel:0973291159" class="list__item contacts__link contacts__link_space">097-329-11-59</a>
-							<a href="tel:0800504010" class="list__item contacts__link contacts__link_space">0800-50-40-10</a>
-							<a href="" class="list__item contacts__link"><i class="icon-location "></i> г. Брест, ул. Учительская, 41/1</a>
-							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail"></i> breststal@.mail.ru</a>
-						</div>
+						<address  class="contacts list list_colum list_aleft vcard">
+							<span class="fn org" style="display:none;">Breststal</span>
+							<a href="tel:0487702777" class="list__item contacts__link tel"><i class="icon-phone"></i> 048 77-02-777</a>
+							<a href="tel:0973291159" class="list__item contacts__link contacts__link_space tel">097-329-11-59</a>
+							<a href="tel:0800504010" class="list__item contacts__link contacts__link_space tel">0800-50-40-10</a>
+							<a href="" class="list__item contacts__link locality"><i class="icon-location "></i> г. Брест, ул. Учительская, 41/1</a>
+							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail email"></i> breststal@.mail.ru</a>
+						</address>
 					</div>
 						<div class="col-sm-6 col-md-5 col-sm-pull-6">
 							<form name="form1" id="form1" class="form">
