--- a/src/category.html
+++ b/src/category.html
@@ -43,10 +43,169 @@
 			</div>
 		</section><!--we-do-->
 
-		<section class="our-products">
+		<section class="category">
 			<div class="container">
+				<div class="row">
+					<div class="col-md-4 category-list-wrapper">
+						<ul class="category-list">
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">металлочерепица</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">профнастил</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">фальцевая картина</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">водосточная система</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">комплектующие</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">софит</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">штакетник</a>
+							</li>
+							<li class="category-list__item">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link" href="">сопутствующие тотвары</a>
+							</li>
+							<li class="category-list__item category-list__item_noborder">
+								<i class="category-list__icon"></i>
+								<a class="category-list__link category-list__link_droped icon-down" href="">палитра цветов</a>
+								<div class="pallite-wraper">
+									<div class="pallite">
+										<div class="pallite__item" data-color="col1"></div>
+										<div class="pallite__item" data-color="col2"></div>
+										<div class="pallite__item" data-color="col3"></div>
+										<div class="pallite__item" data-color="col4"></div>
+										<div class="pallite__item" data-color="col5"></div>
+										<div class="pallite__item" data-color="col6"></div>
+										<div class="pallite__item" data-color="col7"></div>
+										<div class="pallite__item" data-color="col8"></div>
+										<div class="pallite__item" data-color="col9"></div>
+										<div class="pallite__item" data-color="col10"></div>
+										<div class="pallite__item" data-color="col11"></div>
+										<div class="pallite__item" data-color="col12"></div>
+										<div class="pallite__item" data-color="col13"></div>
+										<div class="pallite__item" data-color="col14"></div>
+										<div class="pallite__item" data-color="col15"></div>
+										<div class="pallite__item" data-color="col16"></div>
+										<div class="pallite__item" data-color="col17"></div>
+										<div class="pallite__item" data-color="col18"></div>
+									</div><!--pallite-->
+									<div class="pallite-about" data-color="col1">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8014</p>
+									</div>
+									<div class="pallite-about" data-color="col2">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+								</div>
+							</li>
+						</ul><!--category-list-->
+					</div>
+					<div class="col-md-8 category-products">
+						<div class="category-product">
+							<div class="category-product__img">
+								<img src="img/item.png" alt="item">
+							</div>
+							<div class="category-product__info">
+								<div class="category-product__header">
+									<span>серия: диаманд +</span>
+									<p>гарантия: 50 лет</p>
+								</div>
+								<ul class="category-product__body">
+									<li> Общая ширина: 9999 мм</li>
+									<li> Общая ширина: 9999 мм</li>
+									<li>Толщина полотна: 0,9 мм</li>
+									<li>Длина модуля черепицы: 999 мм</li>
+									<li>Высота ребра: 99 мм</li>
+								</ul>
+							</div>
+						</div>
+						<div class="category-product">
+							<div class="category-product__img">
+								<img src="img/item.png" alt="item">
+							</div>
+							<div class="category-product__info">
+								<div class="category-product__header">
+									<span>серия: диаманд +</span>
+									<p>гарантия: 50 лет</p>
+								</div>
+								<ul class="category-product__body">
+									<li> Общая ширина: 9999 мм</li>
+									<li> Общая ширина: 9999 мм</li>
+									<li>Толщина полотна: 0,9 мм</li>
+									<li>Длина модуля черепицы: 999 мм</li>
+									<li>Высота ребра: 99 мм</li>
+								</ul>
+							</div>
+						</div>
+					</div><!--ccategory-products-->
+				</div>
 			</div>
-		</section><!--our-products-->
+		</section><!--category-->
+
+		<section class="quality">
+			<div class="container">
+				<h2 class="title title_dark title_bordered-long">гарантии качества</h2>
+				<p>Тщательный подбор материалов и контроль за исполнением.</p>
+				<p class="box-bordered">На СООО “Брестсталь” здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, поэтому мы работаем только с лучшими производителями стали</p>
+
+				<div class="row quality__about box-bordered">
+					<div class="col-md-5 quality__img">
+						<img src="img/sloy.png" alt="layer">
+					</div>
+					<div class="col-md-7 quality__descr">
+						<p> Проходит испытания на применение исключительно на STEel Steel на металлический слой, который представляет собой смесь из 95% цинка и 5 % алюминия , обеспечивая непревзойденную защиту от коррозии , даже по краям разреза. Толщина покрытия органического продукта Colorcoat HPS200® Ultra 200 микрон</p>
+						<ul>
+							<li>- в два раза большая стойкость цвета и глянца по сравнению с пластизольным покрытием</li>
+							<li>- уникальная стойкость на срезанных краях</li>
+							<li>- гарантия Confidex® на срок до 40 лет</li>
+							<li>- Продукт не требует проверки или технического обслуживания</li>
+							<li>- Гарантированная максимальная прочность</li>
+						</ul>
+					</div>
+				</div><!--quality__about-->
+				<p>Мы постоянно расширяем круг контактов</p>
+				<p class="box-bordered">	Здесь возможно будет текст, о географии партнёров вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст.</p>
+				<h2>Наши партнёры:</h2>
+				<div class="partners">
+					<div class="partners__item"><img src="img/arcelor.png" alt="arcelor"></div>
+					<div class="partners__item"><img src="img/nlmk.png" alt="nlmk"></div>
+					<div class="partners__item"><img src="img/tata.png" alt="tata"></div>
+					<div class="partners__item"><img src="img/thyssenkrupp.png" alt="thyssenkrupp"></div>
+					<div class="partners__item"><img src="img/uss.png" alt="uss"></div>
+				</div>
+			</div>
+		</section><!--quality-->
+
 
 
 		//= template/footer.html
