--- a/src/category.html
+++ b/src/category.html
@@ -15,19 +15,19 @@
 	<div id="panel" class="content">
 
 		<section class="first">
-			//= template/header.html
+		//= template/header.html
 
 			<div class="container first__inner">
 				<div class="row">
-					<div class="col-sm-7 first__txt">
+					<div class=" first__txt">
 						<p>
-							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, ВОДООТЛИВНОЙ СИСТЕМЫ <br>И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ
+							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, водосточной СИСТЕМЫ И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ в бресте
 						</p>
 					</div>
-					<div class="col-sm-5 col-md-4 col-md-offset-1 manager">
+					<!-- <div class="col-sm-5 col-md-4 col-md-offset-1 manager">
 						<p>о наличии продукта можно уточнить у менеджера</p>
 						<button class="manager__btn buttn buttn_def">задать вопрос менеджеру <i class="manager__icon"></i></button>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section><!--first-->
@@ -116,6 +116,182 @@
 										<p>цвет: ral 8014</p>
 									</div>
 									<div class="pallite-about" data-color="col2">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col3">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col4">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col5">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col6">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col7">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col8">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col9">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col10">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col11">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col12">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col13">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col14">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col15">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col16">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col17">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8015</p>
+									</div>
+									<div class="pallite-about" data-color="col18">
 										<div class="pallite-texture">
 											<div class="pallite-texture__matted"></div>
 											<div class="pallite-texture__glossy"></div>
