--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
 
 			<div class="container first__inner">
 				<div class="row">
-					<div class="col-sm-7 first__txt">
+					<div class="first__txt">
 						<p>
-							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, ВОДООТЛИВНОЙ СИСТЕМЫ <br>И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ
+							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, водосточной СИСТЕМЫ И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ в бресте
 						</p>
 					</div>
-					<div class="col-sm-5 col-md-4 col-md-offset-1 manager">
+					<!-- <div class="col-sm-5 col-md-4 col-md-offset-1 manager">
 						<p>о наличии продукта можно уточнить у менеджера</p>
 						<button class="manager__btn buttn buttn_def">задать вопрос менеджеру <i class="manager__icon"></i></button>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section><!--first-->
@@ -159,6 +159,7 @@
 							<a href="tel:0973291159" class="list__item contacts__link contacts__link_space tel">097-329-11-59</a>
 							<a href="tel:0800504010" class="list__item contacts__link contacts__link_space tel">0800-50-40-10</a>
 							<a href="" class="list__item contacts__link locality"><i class="icon-location "></i> г. Брест, ул. Учительская, 41/1</a>
+							<a href="" class="list__item contacts__link locality"><i class="icon-calendar "></i> пн-пт: 8:30-13:00, 14:00-17:30</a>
 							<a href="mailto:uns@ukrnavi.com" class="list__item contacts__link"><i class="icon-mail email"></i> breststal@.mail.ru</a>
 						</address>
 					</div>
@@ -170,7 +171,7 @@
 								<input class="form__field" type="email" id="email" name="email">
 								<label for="name">сообщение</label>
 								<textarea class="form__field" name="message" id="message"></textarea>
-								<input type="submit" class="buttn buttn_err form__btn" id="send" value="отправить письмо">
+								<input type="submit" class="buttn buttn_err form__btn" id="send" value="заказать консультацию">
 							</form>
 						</div>
 				</div>
