--- a/src/products.html
+++ b/src/products.html
@@ -15,19 +15,19 @@
 	<div id="panel" class="content">
 
 		<section class="first">
-			//= template/header.html
+		//= template/header.html
 
 			<div class="container first__inner">
 				<div class="row">
-					<div class="col-sm-7 first__txt">
+					<div class="first__txt">
 						<p>
-							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, ВОДООТЛИВНОЙ СИСТЕМЫ <br>И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ
+							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, водосточной СИСТЕМЫ И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ в бресте
 						</p>
 					</div>
-					<div class="col-sm-5 col-md-4 col-md-offset-1 manager">
+					<!-- <div class="col-sm-5 col-md-4 col-md-offset-1 manager">
 						<p>о наличии продукта можно уточнить у менеджера</p>
 						<button class="manager__btn buttn buttn_def">задать вопрос менеджеру <i class="manager__icon"></i></button>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section><!--first-->
