--- a/src/price.html
+++ b/src/price.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Category</title>
+	<title>price</title>
 	<meta name="keywords" content="Test" />
 	<meta name="description" content="Test">
 	<meta name="author" content="ittech"/>
@@ -311,127 +311,28 @@
 						</ul><!--category-list-->
 					</div><!--category-list-wrapper-->
 					<div class="col-md-8">
-						<div class="category-products">
-							<div class="category-product">
-								<div class="category-product__img">
-									<img data-src="img/braun.png" data-title="title1" src="img/item.png" alt="item">
-									<div class="category-product__img-scale">
-										<i class="icon icon-scale"></i>
-									</div>
-								</div>
-								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
-									<div class="category-product__header">
-										<span class="icon-down">диаманд плюс </span>
-									</div>
-								</div>
-							</div>
-
-							<div class="category-product">
-								<div class="category-product__img">
-									<img data-src="img/braun.png" data-title="title2" src="img/item.png" alt="item">
-									<div class="category-product__img-scale">
-										<i class="icon icon-scale"></i>
-									</div>
-								</div>
-								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
-									<div class="category-product__header">
-										<span class="icon-down">диаманд плюс </span>
-									</div>
-								</div>
-							</div>
-
-							<div class="category-product">
-								<div class="category-product__img">
-									<img data-src="img/braun.png" data-title="title2" src="img/item.png" alt="item">
-									<div class="category-product__img-scale">
-										<i class="icon icon-scale"></i>
-									</div>
-								</div>
-								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
-									<div class="category-product__header">
-										<span class="icon-down">диаманд плюс </span>
-									</div>
-								</div>
-							</div>
-						</div><!--category-products-->
-						<div class="category__pages"></div>		
+						
 					</div>
 				</div>
 			</div>
 		</section><!--category-->
 
-		<section class="quality">
+		<section class="our-partners">
 			<div class="container">
-				<h2 class="title title_dark title_bordered-long">гарантии качества</h2>
-				<p>Тщательный подбор материалов и контроль за исполнением.</p>
-				<p class="box-bordered">На СООО “Брестсталь” здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, поэтому мы работаем только с лучшими производителями стали</p>
-
-				<div class="row quality__about box-bordered">
-					<div class="col-md-5 quality__img">
-						<img src="img/sloy.png" alt="layer">
-					</div>
-					<div class="col-md-7 quality__descr">
-						<p> Проходит испытания на применение исключительно на STEel Steel на металлический слой, который представляет собой смесь из 95% цинка и 5 % алюминия , обеспечивая непревзойденную защиту от коррозии , даже по краям разреза. Толщина покрытия органического продукта Colorcoat HPS200® Ultra 200 микрон</p>
-						<ul>
-							<li>- в два раза большая стойкость цвета и глянца по сравнению с пластизольным покрытием</li>
-							<li>- уникальная стойкость на срезанных краях</li>
-							<li>- гарантия Confidex® на срок до 40 лет</li>
-							<li>- Продукт не требует проверки или технического обслуживания</li>
-							<li>- Гарантированная максимальная прочность</li>
-						</ul>
-					</div>
-				</div><!--quality__about-->
-				<p>Мы постоянно расширяем круг контактов</p>
-				<p class="box-bordered">	Здесь возможно будет текст, о географии партнёров вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст, вероятно будет текст, здесь возможно будет текст.</p>
-			</div>
-			<section class="our-partners">
-				<div class="container">
-					<h2>Наши партнёры:</h2>
-					<div class="partners">
-						<div class="partners__item"><img src="img/arcelor.png" alt="arcelor"></div>
-						<div class="partners__item"><img src="img/nlmk.png" alt="nlmk"></div>
-						<div class="partners__item"><img src="img/tata.png" alt="tata"></div>
-						<div class="partners__item"><img src="img/thyssenkrupp.png" alt="thyssenkrupp"></div>
-						<div class="partners__item"><img src="img/uss.png" alt="uss"></div>
-					</div>
+				<h2>Наши партнёры:</h2>
+				<div class="partners">
+					<div class="partners__item"><img src="img/arcelor.png" alt="arcelor"></div>
+					<div class="partners__item"><img src="img/nlmk.png" alt="nlmk"></div>
+					<div class="partners__item"><img src="img/tata.png" alt="tata"></div>
+					<div class="partners__item"><img src="img/thyssenkrupp.png" alt="thyssenkrupp"></div>
+					<div class="partners__item"><img src="img/uss.png" alt="uss"></div>
 				</div>
-			</section>
-		</section><!--quality-->
+			</div>
+		</section>
 
 
 		//= template/footer.html
 	</div><!--content-->
-
-		<div class="pop-up">
-			<div class="pop-up__body">
-				<img src="img/product.jpg" alt="">
-				<div class="pop-up__footer">
-					металлочерепица: <span class="pop-up__title">диаманд плюс</span><i class="pop-up__close"></i>
-				</div>	
-			</div>
-		</div>
-
 	//= template/foot.html
 </body>
 </html>
