--- a/src/productsold.html
+++ b/src/productsold.html
@@ -11,28 +11,24 @@
 </head>
 <body>
 	//= template/aside.html
-	
-			//= template/header.html
 
 	<div id="panel" class="content">
 
 		<section class="first">
+		//= template/header.html
 
 			<div class="container first__inner">
+				<div class="row">
 					<div class="first__txt">
 						<p>
 							ПРОИЗВОДСТВО МЕТАЛЛОЧЕРЕПИЦЫ, ПРОФНАСТИЛА, ФАЛЬЦЕВОЙ КРОВЛИ, водосточной СИСТЕМЫ И СОПУТСТВУЮЩИХ ЭЛЕМЕНТОВ в бресте
 						</p>
 					</div>
-					<div class="consultant">
-						<button>ОСТАВИТЬ ЗАЯВКУ НА БЕСПЛАТНУЮ  КОНСУЛЬТАЦИЮ СО СПЕЦИАЛИСТОМ</button>
-						<form  action="" class="consultant__form" name="consultant">
-							<input type="text" class="consultant__field" name="name" placeholder="Ваше имя">
-							<input type="tel" class="consultant__field" name="tel" placeholder="Ваш телефон">
-							<input type="email" class="consultant__field" name="email" placeholder="Ваш email">
-							<input type="submit" class="consultant__btn" value="отправить">
-						</form>
-					</div>
+					<!-- <div class="col-sm-5 col-md-4 col-md-offset-1 manager">
+						<p>о наличии продукта можно уточнить у менеджера</p>
+						<button class="manager__btn buttn buttn_def">задать вопрос менеджеру <i class="manager__icon"></i></button>
+					</div> -->
+				</div>
 			</div>
 		</section><!--first-->
 
@@ -49,24 +45,8 @@
 
 		<section class="our-products">
 			<div class="container">
-				<div class="products__header">
-					<h2 class="title title_bordered title_bordered-dark">наша продукция</h2>
-					<nav class="products__menu list">
-						<div class="products__menu-nav">
-							<a class="first-block" href=""><</a>
-							<a class="second-block" href="">></a>
-						</div>
-						<a href="" data-slide="first" class="list__item list__item_border">металлочерепица</a>
-						<a href="" data-slide="first" class="list__item list__item_border">профнастил</a>
-						<a href="" data-slide="first" class="list__item list__item_border">декоративный профиль</a>
-						<a href="" data-slide="first" class="list__item list__item_border">комплектующие</a>
-						<a href="" data-slide="second" class="list__item list__item_border">металлочерепица1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">профнастил1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">декоративный профиль1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">комплектующие1</a>
-					</nav>
-				</div>
-			
+				<h2 class="title title_bordered title_bordered-dark">Наша продукция</h2>
+				<div class="siema">
 					<div class="page">
 						<div class="row product">
 							<div class="col-sm-6 product__info text-right">
@@ -104,6 +84,45 @@
 							</div>
 						</div><!--product-->
 					</div><!--page1-->
+
+					<div class="page">
+						<div class="row product">
+							<div class="col-sm-6 product__info text-right">
+								<h2 class="product__title title title_bordered title_bordered-right title_bordered-dark">Металлочерепица 2</h2>
+								<p>Металлочерепица является современным кровельным материалом, который сочетает в себе красивый внешний вид, относительную простоту монтажа и небольшой общий вес получаемой конструкции...</p>
+								<a class="product__link" href="">подробнее</a>
+							</div>
+							<div class="col-sm-6 product__img"></div>
+						</div><!--product-->
+
+						<div class="row product">
+							<div class="col-sm-6 product__img"></div>
+							<div class="col-sm-6 product__info text-left">
+								<h2 class="product__title title title_bordered title_bordered-dark">ПРОФНАСТИЛ</h2>
+								<p>Профнастил – это покрытие, которое активно используется при промышленном строительстве быстровозводимых зданий. В последнее время профнастил стал просто незаменимым. Его широко... </p>
+								<a class="product__link" href="">подробнее</a>
+							</div>
+						</div><!--product-->
+
+						<div class="row product">
+							<div class="col-sm-6 product__info text-right">
+								<h2 class="product__title title title_bordered title_bordered-right title_bordered-dark">ФАЛЬЦЕВАЯ КАРТИНА</h2>
+								<p>Фальцевая кровля – кровля, смонтированная из металлических листов или рулонов, соединенных при помощи фальцев (швов). Скрытый крепеж, полное отсутствие отверстий в материале и...</p>
+								<a class="product__link" href="">подробнее</a>
+							</div>
+							<div class="col-sm-6 product__img"></div>
+						</div><!--product-->
+
+						<div class="row product">
+							<div class="col-sm-6 product__img"></div>
+							<div class="col-sm-6 product__info text-left">
+								<h2 class="product__title title title_bordered title_bordered-dark">ВОДОСТОЧНАЯ СИСТЕМА</h2>
+								<p>Водосточные системы предназначены для отвода воды, образующейся при дожде и таянии снега, с крыши здания и защищают от разрушительного воздействия влаги фасад и цоколь Вашего дома...</p>
+								<a class="product__link" href="">подробнее</a>
+							</div>
+						</div><!--product-->
+					</div><!--page2-->
+				</div><!--siema-->
 
 				<div class="our-products__pagination">
 					<div class="pagination">
